# plugins

./: README.md
InnoDrupe/: .gitignore
InnoDrupe/gemini-auth/: Cargo.toml  README.md  manifest.toml
InnoDrupe/gemini-auth-wasm/: build.sh  plugin.toml
InnoDrupe/gemini-auth-wasm/src/: lib.rs
InnoDrupe/gemini-auth-wasm/tests/: integration.rs
InnoDrupe/gemini-auth/src/: lib.rs  main.rs
tark/chatgpt/: Cargo.toml  README.md  build.sh  plugin.toml
tark/chatgpt/src/: lib.rs
tark/discord/: Cargo.toml  build.sh  plugin.toml
tark/discord/src/: lib.rs
tark/gemini-oauth/: Cargo.toml  plugin.toml
tark/gemini-oauth/src/: lib.rs
