[package]
name = "tark-plugin-gemini-auth"
version = "0.1.0"
edition = "2021"
description = "Gemini OAuth plugin for tark - proxies requests through Cloud Code Assist API"
license = "MIT"

[[bin]]
name = "gemini-auth-proxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client  
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"