[package]
name = "chatgpt-oauth"
version = "0.1.0"
edition = "2021"
description = "ChatGPT Pro/Plus OAuth authentication plugin for tark"
authors = ["tark contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
