[package]
name = "tark-plugin-discord-channel"
version = "0.2.1"
edition = "2021"
description = "Discord channel WASM plugin for tark (gateway DM + interactions)"
license = "MIT"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
